# HA-AI-Universal

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml
custom_components/ai_universal/: __init__.py  config_flow.py  const.py  conversation.py  llm_bridge.py  manifest.json
custom_components/ai_universal/translations/: en.json
custom_components/ha_ai_universal/: __init__.py  const.py  manifest.json
docs/: architecture.md  providers.md
examples/: chatbot.py  codegen.py
tests/: conftest.py  test_config.py  test_llm_bridge.py  test_providers.py  test_router.py
uai/: __init__.py  config.py  router.py
uai/providers/: __init__.py  base.py  claude.py  copilot.py  gemini.py  openai.py  perplexity.py
uai/utils/: __init__.py  http.py  logger.py  retry.py
